[package]

name = "hyperdrive-chain-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]

ethers = { version = "2.0.8", features = ["ws"] }
futures = "0.3"
hex-literal = "0.4.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = "4.5.4"
serde_json = "1.0.115"
serde = "1.0.197"
csv = "1.3.0"
hyperdrive-wrappers = { git = "https://github.com/delvtech/hyperdrive.git", tag = "v0.10.1", package = "hyperdrive-wrappers" }
hyperdrive-math = { git = "https://github.com/delvtech/hyperdrive", tag = "v0.10.1", package = "hyperdrive-math" }
fixed-point = { git = "https://github.com/delvtech/hyperdrive", tag = "v0.10.1", package = "fixed-point" }
dashmap = "5.5.3"
chrono = "0.4.37"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
