[package]

name = "hyperdrive-chain-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]

ethers = { version = "2.0.9", features = ["ws", "rustls"] }
hex-literal = "0.4.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.4", features = ["cargo"] }
serde_json = "1.0.115"
serde = "1.0.197"
csv = "1.3.0"
dashmap = "5.5.3"
chrono = "0.4.37"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
rust_decimal = "1.35.0"
dotenv = "0.15.0"
hyperdrive-wrappers = { git = "https://github.com/delvtech/hyperdrive.git", tag = "v1.0.0", package = "hyperdrive-wrappers" }
hyperdrive-math = { git = "https://github.com/delvtech/hyperdrive", tag = "v1.0.0", package = "hyperdrive-math" }
fixed-point = { git = "https://github.com/delvtech/hyperdrive", tag = "v1.0.0", package = "fixed-point" }
lazy_static = "1.4.0"
